--- a/packages/backend/discovery/_templates/orbitstack/SequencerInbox/template.jsonc
+++ b/packages/backend/discovery/_templates/orbitstack/SequencerInbox/template.jsonc
@@ -30,6 +30,9 @@
       }
     },
     "batchPosters": {
+      "target": {
+        "role": "Sequencer"
+      },
       "handler": {
         "type": "arbitrumActors",
         "actorType": "batchPoster"
